--- a/cfgs/celeba.ini
+++ b/cfgs/celeba.ini
@@ -16,16 +16,30 @@ smoothSh=True #smooth the optimized  environment map
 saveExr=False #save the optimized  env map as exr or not ( if False a png is saved)
 
 #image
-maxResolution = 256 #maximum allowed resolution (if input image is larger it will be automatically scaled down). this limitation is here to allow the library to run on hardware with limited gpu memory and also to maintain  a raisonable optimization speed on non rtx gpus. this limit can be increased on decent gpus/cpus
+maxResolution = 512 #maximum allowed resolution (if input image is larger it will be automatically scaled down). this limitation is here to allow the library to run on hardware with limited gpu memory and also to maintain  a raisonable optimization speed on non rtx gpus. this limit can be increased on decent gpus/cpus
 
 #camera
 camFocalLength = 3000.0 #focal length in pixels (=  f_{mm} * imageWidth / sensorWidth)
 optimizeFocalLength = True #if True the initial focal length is estimated otherwise it remains constant 
 
+epsilon = 0.15
+w0 = 1000.0
+w1 = 1.0 
+w2 = 120.0
+w3 = 0.5
+w4 = 20
+w5 = 2000.0
+w6 = 2.0
+w7 = 1.0 
+gamma_length = 1.5
+gamma_lr = 0.01
+lnum = 5
+
 #optimization
-iterStep1 = 2000 # number of iterations for the coarse optim
-iterStep2 = 400 #number of iteration for the first dense optim (based on statistical priors)
-iterStep3 = 100 #number of iterations for refining the statistical albedo priors
+iterStep1 = 1000 # number of iterations for the coarse optim
+iterStep2 = 400 #number of iterations for the first dense optim (based on statistical priors)
+iterStep0 = 100 #number of iterations to conduct ACE
+iterStep3 = 200 #number of iterations for refining the statistical albedo priors
 weightLandmarksLossStep2 = 0.001 #landmarks weight during step2
 weightLandmarksLossStep3 = 0.001  # landmarks weight during step3
 
@@ -36,12 +50,12 @@ weightAlbedoReg = 0.001  # weight for albedo regularization
 #regularizers for diffuse texture in step 3
 weightDiffuseSymmetryReg = 300. #symmetry regularizer weight for diffuse texture (at step 3). u may want to increase it in case of harsh shadows
 weightDiffuseConsistencyReg = 100.  # consistency regularizer weight for diffuse texture (at step 3). u may want to increase it in case of harsh shadows
-weightDiffuseSmoothnessReg = 0.001  # smoothness regularizer weight for diffuse texture (at step 3)
+weightDiffuseSmoothnessReg = 0.001  # smoothness regularizer weight for diffuse texture (at step 3), 0.001
 
 #regularizers for specular  texture in step 3
 weightSpecularSymmetryReg = 200.  # symmetry regularizer weight for specular texture (at step 3). u may want to increase it in case of harsh shadows
 weightSpecularConsistencyReg = 2.  # consistency regularizer weight for specular texture (at step 3). u may want to increase it in case of harsh shadows
-weightSpecularSmoothnessReg = 0.001  # smoothness regularizer weight for specular texture (at step 3)
+weightSpecularSmoothnessReg = 0.001  # smoothness regularizer weight for specular texture (at step 3),0.001
 
 #regularizers for roughness texture in step 3
 weightRoughnessSymmetryReg = 200.  # symmetry regularizer weight for roughness texture (at step 3). u may want to increase it in case of harsh shadows
@@ -49,10 +63,10 @@ weightRoughnessConsistencyReg = 0.  # consistency regularizer weight for roughne
 weightRoughnessSmoothnessReg = 0.002  # smoothness regularizer weight for roughness texture (at step 3)
 
 #debug
-debugFrequency = 30 #display frequency during optimization (saved to debug directory) (0: no debug display)
+debugFrequency = 0 #display frequency during optimization (saved to debug directory) (0: no debug display)
 saveIntermediateStage = False #if True the output of stage 1 and 2 are saved. stage 3 is always saved which is the output of the optim
-verbose = False #display loss on terminal if true
+verbose = True #display loss on terminal if true
 
 #ray tracing
-rtSamples = 4000 #the number of ray tracer samples to render the final output (higher is better but slower) best value is  20000  but on my old gpu it takes too much time to render. if u have nvidia rtx u are fine enjoy :) 
+rtSamples = 10000 #the number of ray tracer samples to render the final output (higher is better but slower) best value is  20000  but on my old gpu it takes too much time to render. if u have nvidia rtx u are fine enjoy :) 
 rtTrainingSamples = 8#number of ray tracing to use during training
