--- a/environment.yml
+++ b/environment.yml
@@ -1,96 +1,133 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: win-64
-blas=1.0=mkl
-blosc=1.21.0=h19a0ad4_0
-brotli=1.0.9=ha925a31_2
-bzip2=1.0.8=he774522_0
-ca-certificates=2022.3.29=haa95532_0
-certifi=2020.6.20=pyhd3eb1b0_3
-cffi=1.14.6=py36h2bbff1b_0
-charls=2.1.0=h33f27b4_2
-cloudpickle=2.0.0=pyhd3eb1b0_0
-colorama=0.4.4=pyhd3eb1b0_0
-cudatoolkit=10.1.243=h74a9793_0
-cycler=0.11.0=pyhd3eb1b0_0
-cytoolz=0.11.0=py36he774522_0
-dask-core=2021.3.0=pyhd3eb1b0_0
-decorator=4.4.2=pypi_0
-face_alignment=1.2.0=py_1
-freeglut=3.2.2=h0e60522_1
-freetype=2.10.4=hd328e21_0
-giflib=5.2.1=h62dcd97_0
-h5py=2.10.0=py36h5e291fa_0
-hdf5=1.10.4=h7ebc959_0
-icc_rt=2019.0.0=h0cc432a_1
-icu=68.2=h0e60522_0
-imagecodecs=2020.5.30=py36hb1be65f_2
-imageio=2.15.0=pypi_0
-intel-openmp=2022.0.0=haa95532_3663
-jasper=2.0.33=h77af90b_0
-jpeg=9d=h2bbff1b_0
-kiwisolver=1.3.1=py36hd77b12b_0
-lcms2=2.12=h83e58a3_0
-libaec=1.0.4=h33f27b4_1
-libblas=3.8.0=20_mkl
-libcblas=3.8.0=20_mkl
-libclang=11.1.0=default_h5c34c98_1
-liblapack=3.8.0=20_mkl
-liblapacke=3.8.0=20_mkl
-libopencv=4.5.2=py36h14c9de7_0
-libpng=1.6.37=h2a8f88b_0
-libprotobuf=3.15.8=h7755175_1
-libtiff=4.2.0=hd0e1b90_0
-libwebp-base=1.2.2=h8ffe710_1
-libzopfli=1.0.3=ha925a31_0
-llvmlite=0.36.0=py36h34b8924_4
-lz4-c=1.9.3=h2bbff1b_1
-matplotlib-base=3.3.4=py36h49ac443_0
-mkl=2020.2=256
-mkl-service=2.3.0=py36h196d8e1_0
-mkl_fft=1.3.0=py36h46781fe_0
-mkl_random=1.1.1=py36h47e9c7a_0
-networkx=2.5.1=pypi_0
-ninja=1.10.2=h559b2a2_2
-numba=0.53.0=py36hf11a4ad_0
-numpy=1.19.2=py36hadc3359_0
-numpy-base=1.19.2=py36ha3acd2a_0
-olefile=0.46=py36_0
-opencv=4.5.2=py36ha15d459_0
-openjpeg=2.4.0=h4fc8c34_0
-openssl=1.1.1n=h8ffe710_0
-pillow=8.4.0=pypi_0
-pip=21.2.2=py36haa95532_0
-py-opencv=4.5.2=py36hfacbf0b_0
-pycparser=2.21=pyhd3eb1b0_0
-pyparsing=3.0.7=pypi_0
-pyreadline=2.1=py36_1
-python=3.6.7=h9f7ef89_2
-python-dateutil=2.8.2=pyhd3eb1b0_0
-python_abi=3.6=2_cp36m
-pytorch=1.3.1=py3.6_cuda101_cudnn7_0
-pywavelets=1.1.1=py36he774522_2
-pyyaml=5.4.1=py36h2bbff1b_1
-qt=5.12.9=h5909a2a_4
-redner-gpu=0.4.25=pypi_0
-scikit-image=0.17.2=pypi_0
-scipy=1.5.4=pypi_0
-setuptools=58.0.4=py36haa95532_0
-six=1.16.0=pyhd3eb1b0_1
-snappy=1.1.8=h33f27b4_0
-sqlite=3.38.2=h2bbff1b_0
-tifffile=2020.9.3=pypi_0
-tk=8.6.11=h2bbff1b_0
-toolz=0.11.2=pyhd3eb1b0_0
-torchvision=0.4.2=py36_cu101
-tornado=6.1=py36h2bbff1b_0
-tqdm=4.63.0=pyhd3eb1b0_0
-vc=14.2=h21ff451_1
-vs2015_runtime=14.27.29016=h5e58377_2
-wheel=0.37.1=pyhd3eb1b0_0
-wincertstore=0.2=py36h7fe50ca_0
-xz=5.2.5=h62dcd97_0
-yaml=0.2.5=he774522_0
-zlib=1.2.11=hbd8134f_5
-zstd=1.4.9=h19a0ad4_0
-mediapipe=0.8.3
+name: deface
+channels:
+  - nvidia/label/cuda-11.3.1
+  - defaults
+dependencies:
+  - _libgcc_mutex=0.1=main
+  - _openmp_mutex=5.1=1_gnu
+  - ca-certificates=2024.11.26=h06a4308_0
+  - cuda=11.3.1=h712c49d_0
+  - cuda-command-line-tools=11.3.1=h712c49d_0
+  - cuda-compiler=11.3.1=h712c49d_0
+  - cuda-cudart=11.3.109=hfb95d0c_0
+  - cuda-cuobjdump=11.3.122=hbf6ec6b_0
+  - cuda-cupti=11.3.111=h12ad217_0
+  - cuda-cuxxfilt=11.3.122=h4dc11a3_0
+  - cuda-gdb=11.3.109=h33b7820_0
+  - cuda-libraries=11.3.1=h712c49d_0
+  - cuda-libraries-dev=11.3.1=h712c49d_0
+  - cuda-memcheck=11.3.109=hf5cb439_0
+  - cuda-nvcc=11.3.122=h4814707_0
+  - cuda-nvdisasm=11.3.122=ha26faa6_0
+  - cuda-nvml-dev=11.3.58=hc25e488_0
+  - cuda-nvprof=11.3.111=h95a27d4_0
+  - cuda-nvprune=11.3.122=hb3346b8_0
+  - cuda-nvrtc=11.3.122=h1aa17d8_0
+  - cuda-nvtx=11.3.109=h4ec7630_0
+  - cuda-nvvp=11.3.111=h4c4416a_0
+  - cuda-runtime=11.3.1=h712c49d_0
+  - cuda-samples=11.3.58=h6d5b628_0
+  - cuda-sanitizer-api=11.3.111=h2446cfc_0
+  - cuda-thrust=11.3.109=he8b717c_0
+  - cuda-toolkit=11.3.1=h712c49d_0
+  - cuda-tools=11.3.1=h712c49d_0
+  - cuda-visual-tools=11.3.1=h712c49d_0
+  - ld_impl_linux-64=2.40=h12ee557_0
+  - libcublas=11.5.1.109=h0fd73e7_0
+  - libcufft=10.4.2.109=h2344711_0
+  - libcurand=10.2.4.109=h0189693_0
+  - libcusolver=11.1.2.109=h1e009e5_0
+  - libcusparse=11.6.0.109=hf5bfba9_0
+  - libffi=3.3=he6710b0_2
+  - libgcc-ng=11.2.0=h1234567_1
+  - libgomp=11.2.0=h1234567_1
+  - libnpp=11.3.3.95=h122bb27_0
+  - libnvjpeg=11.5.0.109=h159916b_0
+  - libstdcxx-ng=11.2.0=h1234567_1
+  - ncurses=6.4=h6a678d5_0
+  - openssl=1.1.1w=h7f8727e_0
+  - pip=24.2=py38h06a4308_0
+  - python=3.8.5=h7579374_1
+  - readline=8.2=h5eee18b_0
+  - setuptools=75.1.0=py38h06a4308_0
+  - sqlite=3.45.3=h5eee18b_0
+  - tk=8.6.14=h39e8969_0
+  - wheel=0.44.0=py38h06a4308_0
+  - xz=5.4.6=h5eee18b_1
+  - zlib=1.2.13=h5eee18b_1
+  - pip:
+      - absl-py==2.0.0
+      - attrs==23.1.0
+      - certifi==2024.8.30
+      - cffi==1.17.1
+      - charset-normalizer==3.3.2
+      - contourpy==1.1.1
+      - cycler==0.11.0
+      - face-alignment==1.4.1
+      - facenet-pytorch==2.5.3
+      - filelock==3.16.1
+      - flatbuffers==23.5.26
+      - fonttools==4.38.0
+      - fsspec==2024.10.0
+      - h5py==3.8.0
+      - idna==3.4
+      - imageio==2.31.2
+      - importlib-metadata==6.7.0
+      - importlib-resources==6.4.5
+      - jax==0.4.13
+      - jaxlib==0.4.13
+      - jinja2==3.1.4
+      - joblib==1.3.2
+      - kiwisolver==1.4.5
+      - lazy-loader==0.4
+      - llvmlite==0.39.1
+      - markupsafe==2.1.5
+      - matplotlib==3.7.5
+      - mediapipe==0.10.11
+      - ml-dtypes==0.2.0
+      - mpmath==1.3.0
+      - networkx==2.6.3
+      - numba==0.56.4
+      - numpy==1.21.6
+      - nvidia-cublas-cu12==12.1.3.1
+      - nvidia-cuda-cupti-cu12==12.1.105
+      - nvidia-cuda-nvrtc-cu12==12.1.105
+      - nvidia-cuda-runtime-cu12==12.1.105
+      - nvidia-cudnn-cu12==9.1.0.70
+      - nvidia-cufft-cu12==11.0.2.54
+      - nvidia-curand-cu12==10.3.2.106
+      - nvidia-cusolver-cu12==11.4.5.107
+      - nvidia-cusparse-cu12==12.1.0.106
+      - nvidia-nccl-cu12==2.20.5
+      - nvidia-nvjitlink-cu12==12.6.85
+      - nvidia-nvtx-cu12==12.1.105
+      - opencv-contrib-python==4.10.0.84
+      - opencv-python==4.10.0.84
+      - opt-einsum==3.4.0
+      - packaging==24.2
+      - pickle5==0.0.11
+      - pillow==9.5.0
+      - protobuf==3.20.3
+      - pycparser==2.22
+      - pyparsing==3.1.1
+      - python-dateutil==2.8.2
+      - pywavelets==1.3.0
+      - redner-gpu==0.4.28
+      - requests==2.31.0
+      - scikit-image==0.19.3
+      - scikit-learn==1.0.2
+      - scipy==1.7.3
+      - six==1.16.0
+      - sounddevice==0.5.1
+      - sympy==1.13.3
+      - threadpoolctl==3.1.0
+      - tifffile==2021.11.2
+      - torch==1.11.0+cu113
+      - torchaudio==0.11.0+cu113
+      - torchvision==0.12.0+cu113
+      - tqdm==4.66.1
+      - triton==3.0.0
+      - typing-extensions==4.7.1
+      - urllib3==2.0.7
+      - zipp==3.15.0
+prefix: /root/miniconda3/envs/facetest2
