--- a/requirements.txt
+++ b/requirements.txt
@@ -1,69 +1,71 @@
-absl-py==1.4.0
-asn1crypto==0.24.0
-cached-property==1.5.2
-certifi==2021.5.30
-chardet==3.0.4
-charset-normalizer==2.0.12
-cryptography==2.1.4
+absl-py==2.0.0
+attrs==23.1.0
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.3.2
+contourpy==1.1.1
 cycler==0.11.0
-dataclasses==0.8
-decorator==4.4.2
-dlib==19.24.2
-face-alignment==1.2.0
+face-alignment==1.4.1
 facenet-pytorch==2.5.3
-future==0.18.3
-h5py==3.1.0
-idna==2.6
-imagecolor==1.2.1
-imageio==2.15.0
-imageio-ffmpeg==0.4.8
-importlib-resources==5.4.0
-joblib==1.1.1
-keyring==10.6.0
-keyrings.alt==3.0
-kiwisolver==1.3.1
-lpips==0.1.4
-matplotlib==3.3.4
-mediapipe==0.8.2
-mypy-extensions==1.0.0
-networkx==2.5.1
-ninja==1.11.1
-numpy==1.19.3
-nvdiffrast==0.3.1
-opencv-python==4.7.0.72
-pickle5==0.0.12
-Pillow==8.4.0
-pip==21.3.1
-protobuf==3.19.6
-pycrypto==2.6.1
-PyGObject==3.26.1
-pyparsing==3.0.9
-pyrallis==0.3.1
-python-apt==1.6.6
+filelock==3.16.1
+flatbuffers==23.5.26
+fonttools==4.38.0
+fsspec==2024.10.0
+h5py==3.8.0
+idna==3.4
+imageio==2.31.2
+importlib-metadata==6.7.0
+importlib_resources==6.4.5
+jax==0.4.13
+jaxlib==0.4.13
+Jinja2==3.1.4
+joblib==1.3.2
+kiwisolver==1.4.5
+lazy_loader==0.4
+llvmlite==0.39.1
+MarkupSafe==2.1.5
+matplotlib==3.7.5
+mediapipe==0.10.11
+ml-dtypes==0.2.0
+mpmath==1.3.0
+networkx==2.6.3
+numba==0.56.4
+numpy==1.21.6
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.6.85
+nvidia-nvtx-cu12==12.1.105
+opencv-contrib-python==4.10.0.84
+opencv-python==4.10.0.84
+opt_einsum==3.4.0
+packaging==24.2
+pickle5==0.0.11
+Pillow==9.5.0
+protobuf==3.20.3
+pycparser==2.22
+pyparsing==3.1.1
 python-dateutil==2.8.2
-PyWavelets==1.1.1
-pyxdg==0.25
-PyYAML==6.0
+PyWavelets==1.3.0
 redner-gpu==0.4.28
-requests==2.27.1
-scikit-image==0.17.2
-scikit-learn==0.24.2
-scipy==1.5.4
-SecretStorage==2.3.1
-setuptools==39.0.1
-sewar==0.4.6
-six==1.11.0
-sklearn==0.0.post7
-ssh-import-id==5.7
+requests==2.31.0
+scikit-image==0.19.3
+scikit-learn==1.0.2
+scipy==1.7.3
+six==1.16.0
+sounddevice==0.5.1
+sympy==1.13.3
 threadpoolctl==3.1.0
-tifffile==2020.9.3
-torch==1.10.0+cu111
-torchaudio==0.10.0+rocm4.1
-torchvision==0.11.0+cu111
-tqdm==4.64.1
-typing_extensions==4.1.1
-typing-inspect==0.9.0
-unattended-upgrades==0.1
-urllib3==1.26.16
-wheel==0.30.0
-zipp==3.6.0
+tifffile==2021.11.2
+tqdm==4.66.1
+triton==3.0.0
+typing_extensions==4.7.1
+urllib3==2.0.7
+zipp==3.15.0
